<resources>
    <string name="app_name">Service Novigrad</string>
    <string name="service_novigrad">Service Novigrad</string>
    <string name="btnRegisterAccount">Register</string>
    <string name="btnLogin">Login</string>
    <string name="imageViewLogoContentDescription">Novigrad Logo</string>
    <string name="textViewTitle">Service Novigrad</string>
    <string name="btnHelp">?</string>
    <string name="textViewRegister">Account Registration</string>
    <string name="firstNameTextBoxHint">First Name</string>
    <string name="lastNameTextBoxHint">Last Name</string>
    <string name="emailTextBoxHint">Email</string>
    <string name="usernameTextBoxHint">Username</string>
    <string name="passwordTextBoxHint">Password</string>
    <string name="firstNameTitle">First Name</string>
    <string name="lastNameTitle">Last Name</string>
    <string name="emailTitle">Email</string>
    <string name="usernameTitle">Username</string>
    <string name="passwordTitle">Password</string>
    <string name="roleTitle">Role</string>
    <string name="customerRadioButton">Customer</string>
    <string name="branchEmployeeRadioButton">Branch Employee</string>
    <string name="branchTitle">Branch</string>
    <string name="employeeNumberTitle">Employee Number</string>
    <string name="btnRegister">Register</string>
    <string name="textViewLogin">Login</string>
    <string name="forgotPasswordTextView">Forgot Password?</string>
    <string name="alreadyRegisteredTextView">Already Registered?</string>
    <string name="confirmPasswordTitle">Confirm Password</string>
    <string name="TextView">Already Registered? Login here.</string>
    <string name="button_7">Welcome</string>
    <string name="welcome">Welcome,</string>
    <string name="signedRole">You are logged in as</string>
    <string name="adminPageTitle">Admin Panel</string>
    <string name="adminPageMessage">Category to edit</string>
    <string name="adminPageServicesButton">Services</string>
    <string name="adminPageAccountsButton">Accounts</string>
    <string name="adminPageLogoutButton">Logout</string>
    <string name="adminServicesPageTitle">Available Services</string>
    <string name="adminPageServiceAddButton">Add Service</string>
    <string name="adminPageServiceDialogName">Service Name</string>
    <string name="dateOfBirthCheckBoxName">Date of Birth Required</string>
    <string name="addressCheckBoxName">Address Required</string>
    <string name="typeOfLicenseCheckBoxName">Type of License Required</string>
    <string name="proofOfResidenceCheckBoxName">Proof of Residence Required</string>
    <string name="proofOfStatusCheckBoxName">Proof of Status Required</string>
    <string name="photoProofCheckBoxName">Photo Required</string>
    <string name="updateServiceButtonText">Update</string>
    <string name="deleteServiceButtonText">Delete</string>
    <string name="createServiceButtonText">Add</string>
    <string name="adminAccountsPageTitle">Active Accounts</string>
    <string name="serviceCreationButton">Add Service</string>
    <string name="servicesInstructionsText">Click to view and long press to edit or delete a service</string>
    <string name="newAccount" />
    <string name="deleteAccountsButton">Delete Account</string>
    <string name="usernameDescriptionTitle">Username</string>
    <string name="firstNameDescriptionTitle">First Name</string>
    <string name="lastNameDescriptionTitle">Last Name</string>
    <string name="emailDescriptionTitle">Email Address</string>
    <string name="accountTypeDescriptionTitle">Account Type</string>
    <string name="loginStatusDescriptionTitle">Login Status</string>
    <string name="accountsInstructionsText">Click to view and long press to delete an account</string>
    <string name="customerRequests">Request a service</string>
    <string name="mainHelpTitle">What is Service Novigrad?</string>
    <string name="mainHelpTextView">This application implements some basic functionalities of services offered
        by Novigrad to our residents. After creating a Customer account, you will be able to fill out forms
        in order to access services like obtaining a driver\'s license and photo ID amongst many other items. If
        you have any questions, feel free to contact us at: service@novigrad.com
    </string>
    <string name="employeePageTitle">Branch Operations</string>
    <string name="employeeProfileButton">Branch Profile</string>
    <string name="employeeServicesButton">Branch Services</string>
    <string name="employeeBranchHoursButton">Branch Hours</string>
    <string name="employeeRequestsButton">Requests</string>
    <string name="employeeProfilePageTitle">Branch Profile</string>
    <string name="employeeBranchProfileNameTitle">Name</string>
    <string name="employeeBranchProfileAddressTitle">Address</string>
    <string name="employeeBranchProfilePhoneNumberTitle">Phone Number</string>
    <string name="employeeBranchProfileAddressMap">Open Map</string>
    <string name="profileBranchInstructionsText">Please note that any edits performed on this page will be seen by the customers.</string>
    <string name="employeeBranchProfileSaveButton">Save Profile</string>
    <string name="employeeBranchHoursTitle">Branch Working Hours</string>
    <string name="employeeBranchHoursMondayTitle">Monday</string>
    <string name="employeeBranchHoursTuesdayTitle">Tuesday</string>
    <string name="employeeBranchHoursWednesdayTitle">Wednesday</string>
    <string name="employeeBranchHoursThursdayTitle">Thursday</string>
    <string name="employeeBranchHoursFridayTitle">Friday</string>
    <string name="employeeBranchHoursSaturdayTitle">Saturday</string>
    <string name="employeeBranchHoursSundayTitle">Sunday</string>
    <string name="employeeBranchHoursSetHours">Set Hours</string>
    <string name="employeeBranchOpenSwitch">Branch Open</string>
    <string name="employeeBranchDefaultHours">Hours: N/A</string>
    <string name="employeeBranchSetBeginningTime">Beginning Time: N/A</string>
    <string name="employeeBranchSetEndTime">End Time: N/A</string>
    <string name="employeeBranchSetBeginningTimeButtonText">Set Beginning Time</string>
    <string name="employeeBranchSetEndTimeButtonText">Set End Time</string>
    <string name="employeeBranchUpdateTimes">Update Times</string>
    <string name="servicesHelpText">Long press to delete some service you no longer want to offer</string>
    <string name="serviceHelpText">Long press to delete a service that your branch no longer offers</string>
    <string name="employeeServicesPageTitle">Services Provided by Branch</string>
    <string name="priceDialog">Enter the price for this service</string>
    <string name="adminPageServicePrice">Price not set</string>
    <string name="empAvailableServiceTitle">Select available services you\'d like to offer at your branch</string>
    <string name="employeeAddServiceTitle">Select available services you\'d like to offer at your branch</string>
    <string name="empAddServiceTitle">Select available services you want to offer at your branch</string>
    <string name="addServiceInstructionsText">Selecting an item on the list will allow you to offer that service</string>
    <string name="updateSelectionButtonText">Update Selection</string>
    <string name="employeeRequestsPageTitle">Branch Requests</string>
    <string name="requestHelpText">Click to view and long press to approve or reject a request</string>
    <string name="customerPageTitle">Customer Panel</string>
    <string name="customerPageMessage">Category to view</string>
    <string name="customerServicesButton">Request Service</string>
    <string name="customerPendingRequestsButton">Pending Requests</string>
    <string name="customerPreviousRequestsButton">Previous Requests</string>
    <string name="customerServicesPageTitle">Filter Branches</string>
    <string name="customerBranchNameTextBox">Branch Name</string>
    <string name="customerAddressTextBox">Branch Address</string>
    <string name="filterSearchButton">Search</string>
    <string name="extraFilterCriteriaButton">Extra Filter Criteria</string>
    <string name="customerServiceHelpText">Click to request a service &amp; view the selected branch\'s information</string>
    <string name="branchesLayoutTitle">Branches</string>
    <string name="customerBranchInformationPageTitle">Branch Information</string>
    <string name="customerBranchRatingTextBox">Branch Rating</string>
    <string name="customerBranchHoursInformationTitle">Branch Working Hours</string>
    <string name="customerSendRequestButton">Send Request</string>
    <string name="customerPendingRequestsPageTitle">Pending Requests</string>
    <string name="customerPreviousRequestsPageTitle">Previous Requests</string>
    <string name="customerPendingRequestsPageHelpInstructions">Long press to cancel a service request</string>
    <string name="customerPreviousRequestsPageHelpInstructions">Long press to rate your experience with the branch that reviewed your request</string>
    <string name="customerExtraCriteriaDialogWeekDayTitle">Filter by working days</string>
    <string name="customerExtraCriteriaDialogServicesTitle">Filter by available services</string>
    <string name="customerExtraCriteriaDialogConfirmButton">Confirm</string>
    <string name="customerServiceAddressDialogTitle">Address Required</string>
    <string name="customerServiceDateOfBirthDialogTitle">Date of Birth Required</string>
    <string name="customerServiceProofOfPhotoDialogTitle">Proof of Photo Required</string>
    <string name="customerServiceProofOfResidenceDialogTitle">Proof of Residence Required</string>
    <string name="customerServiceProofOfLicenseDialogTitle">Proof of License Required</string>
    <string name="customerServiceProofOfStatusDialogTitle">Proof of Status Required</string>
    <string name="customerServicePriceDialogTitle">Service Price</string>
    <string name="customerAvailableServicesDialogTitle">Services Offered by the Branch</string>
    <string name="customerDateOfBirthDialogTitle">Date of Birth</string>
    <string name="customerAddressDialogTitle">Address</string>
    <string name="customerAttachPhotoDialogCheckbox">Attach Photo</string>
    <string name="customerAttachProofOfResidenceDialogCheckbox">Attach Proof of Residence</string>
    <string name="customerAttachProofOfLicenseDialogCheckbox">Attach Proof of License</string>
    <string name="customerAttachProofOfStatusDialogCheckbox">Attach Proof of Status</string>
    <string name="customerSubmitRequestButton">Submit Request</string>
    <string name="customerServiceRequirementsDialogTitle">Service Requirements</string>
    <string name="customerRequestFormDialogTitle">Service Request Form</string>
    <string name="employeeRequestRecommendedActionTitle">Recommended Action</string>
    <string name="employeeRequestRequestIdTitle">Request ID</string>
    <string name="customerRateBranchDialogTitle">Rate your experience with us!</string>
    <string name="customerOptionalCommentDialogTitle">Optional comment</string>
    <string name="customerSubmitReviewButtonDialog">Submit review</string>
    <string name="customerCancelRequestButtonDialog">Cancel</string>
</resources>