<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/MainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/weekDayTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/customerExtraCriteriaDialogWeekDayTitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/mondayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/employeeBranchHoursMondayTitle" />

            <CheckBox
                android:id="@+id/tuesdayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/employeeBranchHoursTuesdayTitle" />

            <CheckBox
                android:id="@+id/wednesdayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/employeeBranchHoursWednesdayTitle" />

            <CheckBox
                android:id="@+id/thursdayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/employeeBranchHoursThursdayTitle" />

            <CheckBox
                android:id="@+id/fridayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/employeeBranchHoursFridayTitle" />

            <CheckBox
                android:id="@+id/saturdayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/employeeBranchHoursSaturdayTitle" />

            <CheckBox
                android:id="@+id/sundayCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/employeeBranchHoursSundayTitle" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/servicesTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/customerExtraCriteriaDialogServicesTitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/ServicesLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/servicesListView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/admin_services_border">

                </ListView>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/serviceSearchBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="Service Name"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/ButtonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customerExtraCriteriaDialogConfirmButton" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>