<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0E3E1E1"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:autoSizeTextType="uniform"
            android:background="#6C6C6C"
            android:text="@string/btnHelp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/TitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/textViewTitle"
                android:textColor="#757272"
                android:textSize="60sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LogoLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageViewLogoContentDescription"
                app:srcCompat="@drawable/province_logo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_rounded_corners"

                android:text="@string/btnLogin"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="-40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegister"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/custom_rounded_corners_register"
                android:text="@string/btnRegister"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>