<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/BeginningLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/beginningTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/employeeBranchSetBeginningTime"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/setBeginningTimeButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/employeeBranchSetBeginningTimeButtonText" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/EndLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/endTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/employeeBranchSetEndTime"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/setEndTimeButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/employeeBranchSetEndTimeButtonText" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/updateTimesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/custom_rounded_corners_admin_services_add_button"
            android:fontFamily="sans-serif-black"
            android:text="@string/employeeBranchUpdateTimes"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>